<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_news_height"
    android:layout_margin="@dimen/item_news_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_news"
        android:layout_width="@dimen/item_news_image_width"
        android:layout_height="@dimen/item_news_image_height"
        android:layout_marginStart="@dimen/item_news_image_margin"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cl_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_news"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_news"
            android:layout_width="@dimen/item_news_delete_width"
            android:layout_height="@dimen/item_news_delete_height"
            android:background="@drawable/ic_delete"
            android:backgroundTint="@color/primaryLightColor"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/content_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/item_news_content_padding_start_end"
            android:paddingEnd="@dimen/item_news_content_padding_start_end"
            android:textStyle="bold"
            android:textColor="@color/primaryDarkColor"
            android:textSize="@dimen/item_news_source_text_size"
            tools:text="@string/source"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/content_caption" />

        <TextView
            android:id="@+id/content_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_news_content_padding_top"
            android:paddingStart="@dimen/item_news_content_padding_start_end"
            android:paddingEnd="@dimen/item_news_content_padding_start_end"
            android:textStyle="bold"
            android:textSize="@dimen/item_news_caption_text_size"
            android:maxLines="3"
            tools:text="@string/caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_source"
            app:layout_constraintBottom_toTopOf="@+id/content_text" />

        <TextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_news_content_padding_top"
            android:paddingStart="@dimen/item_news_content_padding_start_end"
            android:paddingEnd="@dimen/item_news_content_padding_start_end"
            android:textSize="@dimen/item_news_text_size"
            android:maxLines="4"
            tools:text="@string/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_caption" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>